--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,9 @@
       </div>
     </header>
     <ul>
-      @for(temperature of historicTemperatures; track temperature) {
-      <li (click)="onReset($index)">{{ temperature }}</li>
+      @for(temperature of historicTemperatures | sort: 'desc'; track
+      temperature) {
+      <li (click)="onReset($index)">{{ temperature | temp : "cel" }}</li>
       }
     </ul>
   </article>
